build(java)!: update to Java 21 (#7)